Prevent overview detail from leaking outside of viewport in firefox
Compact the detail view a bit by removing extra margin under title.

--- a/app/files/css/overview.scss
+++ b/app/files/css/overview.scss
@@ -149,6 +149,7 @@
     h3 {
       font-size: 1em;
       color: $label-text;
+      margin-bottom: 0;
     }
 
     display: table;
